Summary: | ASTERISK-29850: ast_get_tid() not implemented for NetBSD | ||
Reporter: | Michał Górny (mgorny) | Labels: | |
Date Opened: | 2022-01-09 01:23:03.000-0600 | Date Closed: | 2022-01-19 11:36:54.000-0600 |
Priority: | Minor | Regression? | No |
Status: | Closed/Complete | Components: | Core/General |
Versions: | GIT | Frequency of Occurrence | Constant |
Related Issues: | |||
Environment: | NetBSD 9.2 | Attachments: | |
Description: | The ast_get_tid() function in main/utils.c includes implementations for a number of operating systems. However, it is missing an implementation for NetBSD.
The thread identifier on NetBSD can be gotten via _lwp_self() function from lwp.h. | ||
Comments: | By: Asterisk Team (asteriskteam) 2022-01-09 01:23:04.408-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-01-19 11:36:55.549-0600 Change 17707 merged by Friendly Automation: main/utils: Implement ast_get_tid() for NetBSD [https://gerrit.asterisk.org/c/asterisk/+/17707|https://gerrit.asterisk.org/c/asterisk/+/17707] By: Friendly Automation (friendly-automation) 2022-01-19 11:39:34.281-0600 Change 17906 merged by Friendly Automation: main/utils: Implement ast_get_tid() for NetBSD [https://gerrit.asterisk.org/c/asterisk/+/17906|https://gerrit.asterisk.org/c/asterisk/+/17906] By: Friendly Automation (friendly-automation) 2022-01-19 11:41:27.989-0600 Change 17907 merged by Friendly Automation: main/utils: Implement ast_get_tid() for NetBSD [https://gerrit.asterisk.org/c/asterisk/+/17907|https://gerrit.asterisk.org/c/asterisk/+/17907] By: Friendly Automation (friendly-automation) 2022-01-19 11:42:22.242-0600 Change 17908 merged by Friendly Automation: main/utils: Implement ast_get_tid() for NetBSD [https://gerrit.asterisk.org/c/asterisk/+/17908|https://gerrit.asterisk.org/c/asterisk/+/17908] |